--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,37 @@
     --third-text-color:#ffffff;
     --accent-color:#4D5AE5;
 }
+h1,
+h2,
+h3,
+h4,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
+}
+
+button {
+    cursor: pointer;
+}
+.container {
+    width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
 
 .list {
     list-style: none;
@@ -25,6 +56,10 @@ body {
     font-style: normal;
 }
 /* ====================COMPONENTS================= */
+.section {
+ padding-top: 120px;
+ padding-bottom: 120px;
+}
 .page-header {
     background-color: var(--third-text-color);
 }
@@ -38,11 +73,13 @@ body {
 }
 
 .section-title {
+    margin-bottom: 120px;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--primary-text-color);
+    
 }
 
 .logo-light {
@@ -75,6 +112,30 @@ body {
 /* ================/COMPONENTS================= */
 
 /* ====================HEADER===================== */
+.page-header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E7E9FC;
+}
+.page-header-container {
+    display: flex;
+    align-items: center;
+}
+.page-nav {
+    display: flex;
+    align-items: center;
+}
+.logo {
+    margin-right: 76px;
+}
+.menu {
+    display: flex;
+    align-items: center;
+}
+.menu-item:not(:last-child) {
+    margin-right: 40px;
+}
+
 .menu-link {
     font-weight: 500;
     line-height: 1.5;
@@ -84,6 +145,14 @@ body {
 .menu-link:hover,
 .menu-link:focus {
     color: #404bbf;
+}
+.navigation-contact {
+    display: flex;
+    align-items: center;
+    margin-left: 332px;
+}
+.adress-item:not(:last-child) {
+    margin-right: 40px;
 }
 
 .adress-link {
@@ -95,22 +164,35 @@ body {
 .adress-link:focus {
     color:#404bbf;
 }
+
 /* ====================/HEADER===================== */
 
 /* ====================SECTION 1===================== */
 .hero {
     background-color: var(--primary-text-color);
+    height: 600px;
+    text-align: center;
+
 }
 
 
 .modal-btn {
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
     font-family: inherit;
     font-weight: 500;
     line-height: 1.5;
-    display: flex;
+    display: inline-block;
     letter-spacing: 0.04em;
     color: var(--third-text-color);
     background-color: var(--accent-color);
+    min-width: 169px;
+    text-align: center; 
+    margin-top: 48px;   
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -121,6 +203,13 @@ body {
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: var(--third-text-color);
+    padding-top: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 496px; 
+    padding-left: 0px;
+    padding-right: 0px;   
+
 }
 
 /* ====================/SECTION 1===================== */
@@ -140,6 +229,7 @@ body {
 }
 
 .feature-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -151,6 +241,12 @@ body {
     letter-spacing: 0.02em;
     color: var(--secondary-text-color);
 }
+.feature-list {
+    display: flex;
+    flex-wrap: nowrap; 
+    gap: 24px;
+
+}
 /* =========================/SECTION 2================ */
 
 /* =========================SECTION 3=================== */
@@ -158,21 +254,66 @@ body {
     background-color: var(--third-text-color);
 }
 
+.work-img {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 72px;
+    gap: 24px;
+    padding-bottom: 120px;
+}
+
 /* =========================/SECTION 3=================== */
 
 /* ====================SECTION 4====================== */
 .section-four {
     background-color: #F4F4FD;
+
+}
+.section-title {
+    margin-bottom: 120px;
+    text-align: center ;
+}
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+
 }
 .team-list-item {
     background-color: var(--third-text-color);
+    flex-basis: calc((100% - 72px) /4);
 }
+.team-list-item-wrapper {
+    padding-bottom: 32px;
+    padding-top: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+    text-align: center;
+    
+}
+.card-description {
+    margin-bottom: 8px;
+}
+
 /* ==============
 ==/SECTION 4====================== */
 
 /* =======================FOOTER==================== */
 .footer {
     background-color: var(--primary-text-color);
+    display: block;
+    min-height: 312px;
+}
+
+.logo-footer {
+ padding-top: 100px;
+ padding-left: 0px;
+}
+.footer-description {
+    width: 264px;
+    height: 72px;
+    margin-top: 18px;
+    padding-left: 0px;
 }
 
 /* =======================/FOOTER==================== */
@@ -182,16 +323,29 @@ body {
 
 
 /* ======================SECTION 1=============================*/
-.buttons {
-font-weight: 500;
-line-height: 1.5;
-display: flex; 
-letter-spacing: 0.04em;
-color: var(--accent-color);
-background-color: #F4F4FD;
-border: 1px solid #E7E9FC;
-border-radius: 4px;
+.button-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 96px;
+    gap: 24px;
+
 }
+
+.buttons {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-weight: 500;
+    line-height: 1.5;
+    display: flex;
+    letter-spacing: 0.04em;
+    color: var(--accent-color);
+    background-color: #F4F4FD;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
+}
+
 .buttons:hover,
 .buttons:focus {
     color: var(--third-text-color);
@@ -199,6 +353,36 @@ border-radius: 4px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
 }
+.content {
+    display: flex;
+}
+.card-description {
+    margin-bottom: 8px;
+}
+.first-line {
+    margin-bottom: 48px;
+    margin-top: 72px;
+    gap: 24px;
+}
+.second-line {
+    margin-bottom: 48px;
+    gap: 24px;
+}
+.third-line {
+    margin-bottom: 48px;
+    gap: 24px;
+}
+.content-list-item {
+    background: #FFFFFF;
+    border: 1px solid #E7E9FC;
+}
 
+.content-item-list-wrapper {
+    padding-left: 16px;
+    padding-right: 0px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    text-align: left;
+}
 /* ======================/SECTION 1======================== */
 /* ==================================/PORTFOLIO========================= */
